--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 #logo{
     height: 50px;
     width: 100px;
-    background-image: url("amazon.jpg");
+    background-image: url("/amazon.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position-y: center;
@@ -98,7 +98,7 @@
 #flaglogo{
     width: 21.6px;
     height: 16.2px;
-    background-image: url("flag.png");
+    background-image: url("/flag.png");
     background-size: cover;
 }
 #lang{
@@ -136,7 +136,7 @@
     font-size: 26px;
 }
 
-/* menu  */
+/* menu starts  */
 .menu{
     height: 39px;
     color: white;
@@ -179,4 +179,32 @@
 .border2:hover{
     border: 2px solid white;
 }
+/* menu ends  */
+
+/* hero section starts */
+.herosection{
+    height: 600px;
+    /* width: 1500px; */
+    background-image: url("/Heroimg.jpg");
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#herocontent{
+    width: 1281px;
+    height: 20px;
+    padding: 10px 14px 10px 14px ;
+    background-color: #f5f6f6;
+    text-align: center;
+    color: #0f1111;
+    font-size: 14px;
+    position: relative;
+    bottom: 20px;
+}
+#herolink{
+    text-decoration: none;
+    color: #007185;
+}
+
 
